--- a/For loop Simple - Questions_vishnu1.ipynb
+++ b/For loop Simple - Questions_vishnu1.ipynb
@@ -134,11 +134,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (1421784041.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    for i in range(5):\u001b[0m\n\u001b[1;37m                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
    "source": [
-    "#5. Write a Python program to having an empty for loop like this, would raise an error without the pass statement.\n"
+    "'''#5. Write a Python program to having an empty for loop like this, would raise an error without the pass statement.'''\n",
+    "for i in range(5):"
    ]
   },
   {
@@ -324,29 +334,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'x': [1, 2, 3], 'y': [1, 2], 'z': [1]}\n"
+     ]
+    }
+   ],
    "source": [
     "''' 11. Write a Python program to convert list of tuples into dictionary using setdefault() method.\n",
     "    Data:\n",
     "        l = [(\"x\", 1), (\"x\", 2), (\"x\", 3), (\"y\", 1), (\"y\", 2), (\"z\", 1)]\n",
     "    Expected Output:\n",
     "        {'x': [1, 2, 3], 'y': [1, 2], 'z': [1]} '''\n",
-    "\n"
+    "l = [(\"x\", 1), (\"x\", 2), (\"x\", 3), (\"y\", 1), (\"y\", 2), (\"z\", 1)]\n",
+    "res = {}\n",
+    "for k,v in l:\n",
+    "    res.setdefault(k,[]).append(v) \n",
+    "print(res)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "''' 12. Write a Python program to print the count of no. of elements in a list until an element in a list is a tuple using isinstance() method.\n",
     "    Data:\n",
     "        x = [10,20,30,(10,20),40]\n",
     "    Expected Output: 3 '''\n",
-    "\n"
+    "\n",
+    "x = [10,20,30,(10,20),40]\n",
+    "count = 0\n",
+    "for i in x:\n",
+    "    if isinstance(i,tuple): \n",
+    "        break\n",
+    "    count += 1\n",
+    "print(count)"
    ]
   },
   {
@@ -391,7 +428,9 @@
     "''' 14. Write a Python program to create multiple lists.\n",
     "    Expected output:\n",
     "        {'1': [], '2': [], '3': [], '4': [], '5': [], '6': [], '7': [], '8': [], '9': [], '10': []} '''\n",
-    "\n"
+    "\n",
+    "dic_comp = {str(i):[] for i in range(1,11)}\n",
+    "print(dic_comp)"
    ]
   },
   {
@@ -405,7 +444,10 @@
     "        n = 5\n",
     "    Expected Output:\n",
     "        [{}, {}, {}, {}, {}] '''\n",
-    "        \n"
+    "l = []\n",
+    "for i in range(6):\n",
+    "    l.append('{}')\n",
+    "print(l)       \n"
    ]
   },
   {
@@ -505,7 +547,9 @@
     "        President 5: sai\n",
     "        President 6: balu\n",
     "        President 7: karthi '''\n",
-    "   "
+    " x = [\"suresh\", \"boss\", \"siva\", \"bala\", \"sai\", \"balu\", \"karthi\"]\n",
+    "for i,j in enumerate(x,start=1):\n",
+    "    print(f\"President {i}: {j}\")  "
    ]
   },
   {
@@ -523,7 +567,12 @@
     "        30.0% boss\n",
     "        50.0% siva\n",
     "        40.0% bala '''\n",
-    "       "
+    "name = [\"suresh\", \"boss\", \"siva\", \"bala\"]\n",
+    "ratios = [0.2, 0.3, 0.1, 0.4]\n",
+    "\n",
+    "for i,j in enumerate(name):\n",
+    "    percentage = ratios[i]*100\n",
+    "    print(f\"{percentage}% {j}\")    "
    ]
   }
  ],
