--- a/While Loop Simple - Questions_vishnu1.ipynb
+++ b/While Loop Simple - Questions_vishnu1.ipynb
@@ -147,15 +147,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24 x 1 = 24\n",
+      "24 x 2 = 48\n",
+      "24 x 3 = 72\n",
+      "24 x 4 = 96\n",
+      "24 x 5 = 120\n",
+      "24 x 6 = 144\n",
+      "24 x 7 = 168\n",
+      "24 x 8 = 192\n",
+      "24 x 9 = 216\n",
+      "24 x 10 = 240\n"
+     ]
+    }
+   ],
    "source": [
-    "6. Write a python program to print multiplication table of 24 using while loop.\n",
+    "'''6. Write a python program to print multiplication table of 24 using while loop.\n",
     "    Data:\n",
     "        24\n",
     "    Expected output:\n",
-    "        24 48 72 96 120 144 168 192 216 240 \n",
+    "        24 48 72 96 120 144 168 192 216 240 '''\n",
+    "number = 24\n",
+    "\n",
+    "i = 1\n",
+    "\n",
+    "\n",
+    "while i <= 10:\n",
+    "   \n",
+    "    product = number * i\n",
+    "    \n",
+    "    print(f\"{number} x {i} = {product}\")\n",
+    "   \n",
+    "    i += 1\n",
     "    \n"
    ]
   },
@@ -181,11 +210,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 13) (4125623541.py, line 13)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[8], line 13\u001b[1;36m\u001b[0m\n\u001b[1;33m    34''''\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 13)\n"
+     ]
+    }
+   ],
    "source": [
-    "8. Write a python program to get the fibonacci series between 0 to 50.\n",
+    "'''8. Write a python program to get the fibonacci series between 0 to 50.\n",
     "    Data:\n",
     "        x,y = 0,1\n",
     "    Expected output:\n",
@@ -197,11 +235,107 @@
     "        8\n",
     "        13\n",
     "        21\n",
-    "        34\n",
+    "        34''''\n",
     "        \n",
-    "        \n",
+    "\n",
+    "\n",
+    "nterms = int(input(\"How many terms? \"))\n",
+    "\n",
+    "\n",
+    "n1, n2 = 0, 1\n",
+    "count = 0\n",
+    "\n",
+    "\n",
+    "if nterms <= 0:\n",
+    "   print(\"Please enter a positive integer\")\n",
+    "\n",
+    "elif nterms == 1:\n",
+    "   print(\"Fibonacci sequence upto\",nterms,\":\")\n",
+    "   print(n1)\n",
+    "\n",
+    "else:\n",
+    "   print(\"Fibonacci sequence:\")\n",
+    "   while count < nterms:\n",
+    "       print(n1)\n",
+    "       nth = n1 + n2\n",
+    "       # update values\n",
+    "       n1 = n2\n",
+    "       n2 = nth\n",
+    "       count += 1\n",
     "        \n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "How many terms?  10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fibonacci sequence:\n",
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''8. Write a python program to get the fibonacci series between 0 to 50.\n",
+    "    Data:\n",
+    "        x,y = 0,1\n",
+    "    Expected output:\n",
+    "        1\n",
+    "        1\n",
+    "        2\n",
+    "        3\n",
+    "        5\n",
+    "        8\n",
+    "        13\n",
+    "        21\n",
+    "        34'''\n",
+    "        \n",
+    "\n",
+    "\n",
+    "nterms = int(input(\"How many terms? \"))\n",
+    "\n",
+    "\n",
+    "n1, n2 = 0, 1\n",
+    "count = 0\n",
+    "\n",
+    "\n",
+    "if nterms <= 0:\n",
+    "   print(\"Please enter a positive integer\")\n",
+    "\n",
+    "elif nterms == 1:\n",
+    "   print(\"Fibonacci sequence upto\",nterms,\":\")\n",
+    "   print(n1)\n",
+    "\n",
+    "else:\n",
+    "   print(\"Fibonacci sequence:\")\n",
+    "   while count < nterms:\n",
+    "       print(n1)\n",
+    "       nth = n1 + n2\n",
+    "       # update values\n",
+    "       n1 = n2\n",
+    "       n2 = nth\n",
+    "       count += 1"
    ]
   },
   {
@@ -252,13 +386,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the number :  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " The sum of the numbers from 1 to 5 is 15.\n"
+     ]
+    }
+   ],
    "source": [
-    "10. Write a python program to add natural number up to sum = 1+2+3+.....+n\n",
+    "''' 10. Write a python program to add natural number up to sum = 1+2+3+.....+n\n",
     "    Expected output:\n",
-    "        The sum is  15\n",
+    "        The sum is  15 '''\n",
+    "\n",
+    "\n",
+    "n = int(input('Enter the number : ')) \n",
+    "sum = 0 \n",
+    "for i in range ( n + 1 ): \n",
+    " sum = sum + i \n",
+    "print(f' The sum of the numbers from 1 to {n} is {sum}.') \n",
+    "\n",
     "            \n",
     "            \n",
     "            \n",
@@ -267,18 +424,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inside loop\n",
+      "Inside loop\n",
+      "Inside loop\n",
+      "Inside else\n"
+     ]
+    }
+   ],
    "source": [
-    "11. Write a python program to illustrate the working of while loop with else statement.\n",
+    "''' 11. Write a python program to illustrate the working of while loop with else statement.\n",
     "    Expected output:\n",
     "        Inside loop\n",
     "        Inside loop\n",
     "        Inside loop\n",
-    "        Inside else\n",
+    "        Inside else '''\n",
     "        \n",
-    "        \n",
+    "count = 0\n",
+    "while count < 3:\n",
+    "    print(\"Inside loop\")\n",
+    "    count += 1\n",
+    "else:\n",
+    "    print(\"Inside else\")     \n",
     "        \n",
     "        "
    ]
@@ -289,7 +462,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "12. Write a simple python program to illustrate the working of nested while loop using given data.\n",
+    "'''12. Write a simple python program to illustrate the working of nested while loop using given data.\n",
     "    Data:\n",
     "        i = 1\n",
     "        j = 3\n",
@@ -299,8 +472,16 @@
     "        3 , 5\n",
     "        4 , 6\n",
     "        5 , 7\n",
-    "        \n",
-    "        \n",
+    "       i = 1'''\n",
+    "\n",
+    "i = 1\n",
+    "j = 3\n",
+    "while i <= 5:\n",
+    "    while j <= 7:\n",
+    "        print(f\"{i} , {j}\")\n",
+    "        break  \n",
+    "    i += 1\n",
+    "    j += 1     \n",
     "        \n",
     "        "
    ]
@@ -311,14 +492,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "13. Write a Python program to print the following output from given data using while loop.\n",
+    "''' 13. Write a Python program to print the following output from given data using while loop.\n",
     "    Data:\n",
     "        n = 7, c = 0\n",
     "    Expected output:\n",
     "        5\n",
-    "        11\n",
+    "        11'''\n",
     "        \n",
-    "        \n",
+    "n = 7\n",
+    "c = 0\n",
+    "while c < 2:\n",
+    "    if c == 0:\n",
+    "        print(n - 2)\n",
+    "    else:\n",
+    "        print(n + 4)\n",
+    "    c += 1      \n",
     "        \n",
     "        "
    ]
@@ -337,7 +525,12 @@
     "        2\n",
     "        3\n",
     "        \n",
-    "        \n",
+    "x = 1\n",
+    "while True:\n",
+    "    print(x)\n",
+    "    if x == 3:\n",
+    "        break\n",
+    "    x += 1        \n",
     "        \n",
     "        "
    ]
@@ -348,7 +541,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "15. Write a python program to continue the next iteration if x is 3.\n",
+    "''' 15. Write a python program to continue the next iteration if x is 3.\n",
     "    Data:\n",
     "        x = 0\n",
     "    Expected output:\n",
@@ -356,9 +549,15 @@
     "        2\n",
     "        4\n",
     "        5\n",
-    "        6\n",
+    "        6'''\n",
     "        \n",
-    "        \n",
+    "x = 0\n",
+    "while x < 6:\n",
+    "    x += 1\n",
+    "    if x == 3:\n",
+    "        continue\n",
+    "    print(x)\n",
+    "     \n",
     "        \n",
     "        "
    ]
@@ -369,7 +568,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "16. Write a python program to print a message once the while condition is false.\n",
+    "'''16. Write a python program to print a message once the while condition is false.\n",
     "    Data:\n",
     "        x = 1\n",
     "    Expeccted output:\n",
@@ -378,10 +577,15 @@
     "        3\n",
     "        4\n",
     "        5\n",
-    "        x is no longer less than 6\n",
+    "        x is no longer less than 6'''\n",
     "        \n",
     "        \n",
-    "        \n",
+    "x = 1\n",
+    "while x < 6:\n",
+    "    print(x)\n",
+    "    x += 1\n",
+    "else:\n",
+    "    print(\"x is no longer less than 6\")       \n",
     "        "
    ]
   },
@@ -391,16 +595,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "17. Write a python program to illustrate a simple while loop.\n",
+    "'''17. Write a python program to illustrate a simple while loop.\n",
     "    Data:\n",
     "        Hello Words\n",
     "    Expected output:\n",
     "        Hello Words\n",
     "        Hello Words\n",
-    "        Hello Words\n",
+    "        Hello Words'''\n",
     "        \n",
     "        \n",
-    "        \n",
+    "message = \"Hello Words\"\n",
+    "count = 0\n",
+    "while count < 3:\n",
+    "    print(message)\n",
+    "    count += 1      \n",
     "        "
    ]
   },
@@ -410,15 +618,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "18. Write a python program to use pass statement in a while loop.\n",
+    "'''18. Write a python program to use pass statement in a while loop.\n",
     "    Data:\n",
     "        x = \"jackforjack\"\n",
     "        y = 0\n",
     "    Expected output:\n",
-    "        Value of y:  11\n",
+    "        Value of y:  11'''\n",
     "            \n",
     "            \n",
-    "            \n",
+    "x = \"jackforjack\"\n",
+    "y = 0\n",
+    "while y < len(x):\n",
+    "    y += 1\n",
+    "    pass\n",
+    "print(\"Value of y:\", y)            \n",
     "            "
    ]
   },
@@ -428,7 +641,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "19. Write a python program to demonstrate while-else loop.\n",
+    "'''19. Write a python program to demonstrate while-else loop.\n",
     "    Data:\n",
     "        x = 0\n",
     "    Expected output:\n",
@@ -436,9 +649,14 @@
     "        2\n",
     "        3\n",
     "        4\n",
-    "        Good bye\n",
+    "        Good bye'''\n",
     "        \n",
-    "        \n",
+    "x = 0\n",
+    "while x < 4:\n",
+    "    x += 1\n",
+    "    print(x)\n",
+    "else:\n",
+    "    print(\"Good bye\")      \n",
     "        \n",
     "        "
    ]
@@ -449,7 +667,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "20. Write a Python program to print multiplication table of 5 using while loop.\n",
+    "'''20. Write a Python program to print multiplication table of 5 using while loop.\n",
     "    Expected output:\n",
     "        5 * 1 = 5\n",
     "        5 * 2 = 10\n",
@@ -460,10 +678,13 @@
     "        5 * 7 = 35\n",
     "        5 * 8 = 40\n",
     "        5 * 9 = 45\n",
-    "        5 * 10 = 50\n",
+    "        5 * 10 = 50'''\n",
     "        \n",
     "        \n",
-    "        \n",
+    "i = 1\n",
+    "while i <= 10:\n",
+    "    print(f\"5 * {i} = {5 * i}\")\n",
+    "    i += 1      \n",
     "        "
    ]
   }
